--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -18,8 +18,8 @@
        class="px-6 py-3 bg-blue-600 text-white rounded-xl hover:bg-blue-700 transition">View Departments</a>
     <a href="/users/register"
        class="px-6 py-3 bg-green-600 text-white rounded-xl hover:bg-green-700 transition">Register as Client</a>
-    <a href="/clinics/register"
-       class="px-6 py-3 bg-purple-600 text-white rounded-xl hover:bg-purple-700 transition">Register Clinic</a>
+    <a href="/doctors/list"
+       class="px-6 py-3 bg-indigo-600 text-white rounded-xl hover:bg-indigo-700 transition">Show Doctors</a>
 </div>
 </body>
 </html>
