--- a/src/main/resources/templates/doctors/list.html
+++ b/src/main/resources/templates/doctors/list.html
@@ -18,11 +18,11 @@
 
     <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-6">
         <a th:each="doctor : ${doctors}"
-           th:href="@{/doctors/{id}(id=${doctor.id})}"
+           th:href="@{/doctors/view/{id}(id=${doctor.id})}"
            class="block bg-white p-6 rounded-xl shadow hover:shadow-lg transition hover:scale-[1.01]">
 
             <div class="mb-4">
-                <img th:src="@{${doctor.imageUrl}}"
+                <img th:src="${doctor.imageUrl}"
                      alt="Doctor Photo"
                      class="rounded-full w-32 h-32 object-cover mx-auto" />
             </div>
