--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -7,18 +7,16 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gray-50 min-h-screen flex flex-col items-center justify-center p-8">
-<h1 class="text-4xl font-bold text-blue-700 mb-6">Welcome to Medical Man System</h1>
+<h1 class="text-4xl font-bold text-blue-700 mb-6">Welcome to Ala-Too Medical System</h1>
 
 <p class="mb-6 text-center max-w-xl text-gray-700">
-    Manage your appointments, explore departments, and connect with clinics and doctors easily.
+    Manage your appointments, explore departments, and doctors easily.
 </p>
 
 <div class="flex gap-6">
     <a href="/departments"
        class="px-6 py-3 bg-blue-600 text-white rounded-xl hover:bg-blue-700 transition">View Departments</a>
-    <a href="/users/register"
-       class="px-6 py-3 bg-green-600 text-white rounded-xl hover:bg-green-700 transition">Register as Client</a>
-    <a href="/doctors/list"
+   <a href="/doctors/list"
        class="px-6 py-3 bg-indigo-600 text-white rounded-xl hover:bg-indigo-700 transition">Show Doctors</a>
 </div>
 </body>
