--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -36,6 +36,11 @@
             Login
         </button>
     </form>
+
+    <p class="mt-4 text-center text-gray-600">
+        Don't have an account?
+        <a th:href="@{/register}" class="text-blue-600 hover:underline">Register</a>
+    </p>
 </div>
 </body>
 </html>
