--- a/src/main/resources/templates/departments/list.html
+++ b/src/main/resources/templates/departments/list.html
@@ -10,7 +10,7 @@
 <div class="container mx-auto px-4 py-10">
 
     <button
-            onclick="window.location.href='/home'"
+            onclick="window.location.href='client/home'"
             class="mb-6 px-4 py-2 bg-blue-600 text-white rounded hover:bg-blue-700 focus:outline-none"
             type="button">
         ← Back
