--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -32,6 +32,12 @@
         <button type="submit" class="w-full bg-blue-600 text-white py-2 rounded hover:bg-blue-700">
             Register
         </button>
+
+        <p class="mt-4 text-center text-gray-600">
+            Already have an account?
+            <a href="/login" class="text-blue-600 hover:underline">Login</a>
+        </p>
+
     </form>
 </div>
 </body>
